Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Peter McCluskey (Nov 19 2001)
  - Applied patches from William King to conform better to HTML 4.01:
    * remove noshade from <hr>
    * change the default DTD
    * escape &'s, add image/png in test.rc, hmrc.example
  - Changed the fix*header() routines so that they handle incremental updates
  sensibly when given a mailbox with multiple messages. In the process, I
  fixed 2 problems with single-message incremental updates, one which left
  out the "Next message" link, and one which created a "Reply" link that should
  have been a "Maybe reply".
  - Add warning for mbox that starts with different msg than gdbm file if
   not using -u (overwrite) option.
  - Change default for overwrite option to off.
  - Fixed segfault that happened when %m parsed in header but mailto was NULL.

Peter McCluskey (Nov 18 2001)
  Folder list now sorted chronologically.

Peter McCluskey (Nov 16 2001)
  Added save_alts and alts_text options.

Peter McCluskey (Nov 15 2001)
  Updated some old documentation, added some security warnings.

Peter McCluskey (Nov 14 2001)
  Changes relevant to security:
  - attachment filenames ending in .shtml get changed to .html.
  - attachment descriptions are passed through convchars to prevent html tags
   from being used there.

Peter McCluskey (Nov 13 2001)
  Fixed malloc bug that caused segfault with linkquotes=1.

Peter McCluskey (Nov 12 2001)
  Update to trio-1.4 (from 1.2) to fix Alpha compile problem.

Peter McCluskey (Nov 7 2001)
 Changes to hypetombox.pl:
  - add some support for handling attachments.
  - fixed some problems arising from some tags being changed to lowercase.
  - add -S option to specify htmlsuffix.
  - changed to convert <p> to blank line (instead of to nothing).
  - additions to improve handling of archives produced linkquotes=1 option.

Peter McCluskey (Nov 5 2001)
  - change parse.c to treat lines containing only a carriage return as