@@ -7,7 +7,8 @@ can use a configuration file to allow you to customize the individual
 aspects of a list.  In past versions of hypermail it was necessary for 
 all hmrc variables to begin with 'hm_'.  While still supported, it is 
 not necessary to use the 'hm_' prefix any longer and this document
-reflects that.
+reflects that. [This page is out of date. See the hmrc.html file for
+complete and up to date info.]
 .RE
 .LP
 In the configuration file, blank lines and lines beginning with a hash mark
